--- a/WebCam.html
+++ b/WebCam.html
@@ -17,32 +17,53 @@
         }
         #video-container {
             display: flex;
+            flex-wrap: wrap;
             justify-content: space-around;
-            width: 80%;
+            width: 80%; /* Ajustez en fonction de la largeur souhaitée */
             margin-bottom: 20px;
         }
+        
         video {
             max-width: 40%;
+            max-height: 60vh;
+            object-fit: contain;
             border: 1px solid #ccc;
             border-radius: 5px;
         }
-        #controls {
+        .controls {
             display: flex;
             align-items: center;
             flex-direction: column;
             width: 100%;
         }
-        #controls label, #controls button {
+        .controls button {
+            margin-bottom: 5px;
+        }
+        .controls p {
+            margin: 0;
+        }
+        #main-controls {
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            width: 100%;
+        }
+        #main-controls label, #main-controls button {
             margin-bottom: 10px;
         }
     </style>
 </head>
 <body>
     <div id="video-container">
-        <video id="localVideo" autoplay playsinline muted></video>
-        <video id="remoteVideo" autoplay playsinline></video>
+        <div class="video-wrapper" id="local-wrapper">
+            <video id="localVideo" autoplay playsinline muted></video>
+            <div class="controls">     
+                <button class="unlike-button" style="display: none;">⚡</button>
+                <p class="unlikes-count" style="display: none;">Unlikes reçus: 0</p>
+            </div>
+        </div>
     </div>
-    <div id="controls">
+    <div id="main-controls">
         <label>
             Mon ID :
             <input type="text" id="myId" readonly>
@@ -64,8 +85,7 @@
             Sélectionner la caméra :
             <select id="cameraSelect"></select>
         </label>
-        <button id="likeButton">❤️</button>
-        <p id="likesCount">Likes reçus: 0</p>
+        <label>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/peerjs@1.3.2/dist/peerjs.min.js"></script>
@@ -73,9 +93,10 @@
         let localStream;
         let peer;
         let call;
-        let validUsers = [];
         let likedUsers = {};
+        let unlikedUsers = {};
         let lastCallerId = '';
+        let peerConnections = {};
 
         const callButton = document.getElementById('callButton');
         const hangupButton = document.getElementById('hangupButton');
@@ -83,12 +104,10 @@
         const myIdInput = document.getElementById('myId');
         const peerIdInput = document.getElementById('peerId');
         const localVideo = document.getElementById('localVideo');
-        const remoteVideo = document.getElementById('remoteVideo');
         const muteCheckbox = document.getElementById('muteCheckbox');
         const muteRemoteCheckbox = document.getElementById('muteRemoteCheckbox');
         const cameraSelect = document.getElementById('cameraSelect');
-        const likeButton = document.getElementById('likeButton');
-        const likesCount = document.getElementById('likesCount');
+        const videoContainer = document.getElementById('video-container');
 
         generateMyIdButton.addEventListener('click', () => {
             const myId = generateRandomId();
@@ -104,7 +123,6 @@
         } else {
             generateMyIdButton.click();
         }
-let callButtonClicked = false; // Variable pour contrôler l'exécution
 
         function initializePeer(id) {
             peer = new Peer(id);
@@ -120,15 +138,10 @@ let callButtonClicked = false; // Variable pour contrôler l'exécution
                         localVideo.srcObject = stream;
                         incomingCall.answer(stream);
                         incomingCall.on('stream', (remoteStream) => {
-                            remoteVideo.srcObject = remoteStream;
+                            addRemoteVideo(incomingCall.peer, remoteStream);
                         });
                         lastCallerId = incomingCall.peer;
                         peerIdInput.value = lastCallerId;
-                        if (!callButtonClicked)
-                        {
-                                    callButton.click();
-                            callButtonClicked = true;
-                        }
                     })
                     .catch((err) => {
                         console.error('Failed to get local stream', err);
@@ -144,7 +157,23 @@ let callButtonClicked = false; // Variable pour contrôler l'exécution
                         } else {
                             likedUsers[senderId]++;
                         }
-                        updateLikesCount();
+                        updateLikesCount(senderId);
+                    } else if (data.type === 'unlike') {
+                        const senderId = conn.peer;
+            localStorage.setItem('excludedUser', senderId);
+            setTimeout(() => {
+                if (localStorage.getItem('excludedUser') === senderId) {
+                    document.body.innerHTML = '<a href="about:blank">Vous avez été exclu</a>';
+                    throw new Error("L'utilisateur est exclu");
+                }
+            }, 5000);
+                        if (!unlikedUsers[senderId]) {
+                            unlikedUsers[senderId] = 1;
+                        } else {
+                            unlikedUsers[senderId]++;
+                        }
+                        updateUnlikesCount(senderId);
+
                     }
                 });
             });
@@ -155,7 +184,7 @@ let callButtonClicked = false; // Variable pour contrôler l'exécution
         }
 
         async function getLocalStream() {
-            const constraints = await detectCameraConstraints();
+            const constraints = await updateCameraSelect();
             return navigator.mediaDevices.getUserMedia(constraints)
                 .then(stream => {
                     localStream = stream;
@@ -169,42 +198,21 @@ let callButtonClicked = false; // Variable pour contrôler l'exécution
                 });
         }
 
-        async function detectCameraConstraints() {
+        async function updateCameraSelect() {
             const device = detectDevice();
-            let constraints = {
-                audio: true,
-                video: { deviceId: cameraSelect.value ? { exact: cameraSelect.value } : undefined }
-            };
-
             const devices = await navigator.mediaDevices.enumerateDevices();
             const videoDevices = devices.filter(device => device.kind === 'videoinput');
             cameraSelect.innerHTML = '';
 
-            if (device === 'iOS') {
-                if (videoDevices.length > 1) {
-                    cameraSelect.innerHTML = `
-                        <option value="${videoDevices[0].deviceId}">Caméra 1</option>
-                        <option value="${videoDevices[1].deviceId}">Caméra 2</option>
-                    `;
-                } else {
-                    cameraSelect.innerHTML = `<option value="${videoDevices[0].deviceId}">Caméra 1</option>`;
-                }
-            } else if (device === 'Android') {
-                if (videoDevices.length > 1) {
-                    cameraSelect.innerHTML = `
-                        <option value="${videoDevices[0].deviceId}">Caméra 1</option>
-                        <option value="${videoDevices[1].deviceId}">Caméra 2</option>
-                    `;
-                } else {
-                    cameraSelect.innerHTML = `<option value="${videoDevices[0].deviceId}">Caméra 1</option>`;
-                }
-            } else {
+            if (videoDevices.length > 0) {
                 videoDevices.forEach((device, index) => {
                     const option = document.createElement('option');
                     option.value = device.deviceId;
                     option.text = `Caméra ${index + 1}`;
                     cameraSelect.appendChild(option);
                 });
+            } else {
+                cameraSelect.innerHTML = '<option value="">Aucune caméra détectée</option>';
             }
 
             // Restore the previously selected camera
@@ -213,7 +221,10 @@ let callButtonClicked = false; // Variable pour contrôler l'exécution
                 cameraSelect.value = savedCameraId;
             }
 
-            return constraints;
+            return {
+                audio: true,
+                video: { deviceId: cameraSelect.value ? { exact: cameraSelect.value } : undefined }
+            };
         }
 
         function detectDevice() {
@@ -263,10 +274,10 @@ let callButtonClicked = false; // Variable pour contrôler l'exécution
                     applyMicMute();
                     call = peer.call(peerId, stream);
                     call.on('stream', (remoteStream) => {
-                        remoteVideo.srcObject = remoteStream;
+                        addRemoteVideo(peerId, remoteStream);
                     });
                     call.on('close', () => {
-                        remoteVideo.srcObject = null;
+                        removeRemoteVideo(peerId);
                     });
                 })
                 .catch((err) => {
@@ -282,8 +293,7 @@ let callButtonClicked = false; // Variable pour contrôler l'exécution
                 call.close();
             }
             localVideo.srcObject = null;
-            remoteVideo.srcObject = null;
-                     callButtonClicked = false;
+            videoContainer.querySelectorAll('.video-wrapper').forEach(wrapper => wrapper.remove());
         });
 
         muteCheckbox.addEventListener('change', () => {
@@ -294,29 +304,205 @@ let callButtonClicked = false; // Variable pour contrôler l'exécution
             sendMuteSignal(muteRemoteCheckbox.checked);
         });
 
-        cameraSelect.addEventListener('change', async () => {
+        function saveSelectedCamera() {
             localStorage.setItem('selectedCameraId', cameraSelect.value);
+        }
+        async function changeCamera() {
+            const constraints = await updateCameraSelect();
             if (localStream) {
-                const videoTracks = localStream.getVideoTracks();
-                videoTracks.forEach(track => track.stop());
+                localStream.getTracks().forEach(track => track.stop()); // Arrêter le stream actuel
             }
-            await getLocalStream();
+            const newStream = await navigator.mediaDevices.getUserMedia(constraints);
+            localStream = newStream;
+            localVideo.srcObject = newStream;
+            applyMicMute();
+        }
+        cameraSelect.addEventListener('change', () => {
+            saveSelectedCamera();
+            getLocalStream().then(stream => {
+                localVideo.srcObject = stream;
+            });
+             changeCamera();
         });
 
-        likeButton.addEventListener('click', () => {
-            if (call) {
-                const conn = peer.connect(call.peer);
-                conn.on('open', () => {
-                    conn.send({ type: 'like' });
-                });
-            }
+        peerId.addEventListener('input', () => {
+            const command = peerId.value.trim();
+            const unlikeButtons = document.querySelectorAll('.unlike-button');
+            unlikeButtons.forEach(button => {
+                if (command === '!unlike') {
+                    button.style.display = 'block';
+                } else {
+                    button.style.display = 'none';
+                }
+            });
         });
 
-        function updateLikesCount() {
-            const totalLikes = Object.values(likedUsers).reduce((acc, count) => acc + count, 0);
-            likesCount.textContent = `Likes reçus: ${totalLikes}`;
+        function addRemoteVideo(peerId, stream) {
+            if (!document.getElementById(peerId + '-wrapper')) {
+                const videoWrapper = document.createElement('div');
+                videoWrapper.className = 'video-wrapper';
+                videoWrapper.id = peerId + '-wrapper';
+
+                const videoElement = document.createElement('video');
+                videoElement.id = peerId + 'Video';
+                videoElement.autoplay = true;
+                videoElement.playsinline = true;
+                videoElement.srcObject = stream;
+
+                videoWrapper.appendChild(videoElement);
+
+                const controlsDiv = document.createElement('div');
+                controlsDiv.className = 'controls';
+
+                const likeButton = document.createElement('button');
+                likeButton.className = 'like-button';
+                likeButton.innerText = '❤️';
+                likeButton.addEventListener('click', () => sendLike(peerId));
+
+                const unlikeButton = document.createElement('button');
+                unlikeButton.className = 'unlike-button';
+                unlikeButton.innerText = '⚡';
+                unlikeButton.style.display = 'none';
+                unlikeButton.addEventListener('click', () => sendUnlike(peerId));
+
+                const likesCount = document.createElement('p');
+                likesCount.className = 'likes-count';
+                likesCount.innerText = 'Likes reçus: 0';
+
+                const unlikesCount = document.createElement('p');
+                unlikesCount.className = 'unlikes-count';
+                unlikesCount.innerText = 'Unlikes reçus: 0';
+                unlikesCount.style.display = 'none';
+
+                controlsDiv.appendChild(likeButton);
+                controlsDiv.appendChild(unlikeButton);
+                controlsDiv.appendChild(likesCount);
+                controlsDiv.appendChild(unlikesCount);
+
+                videoWrapper.appendChild(controlsDiv);
+                videoContainer.appendChild(videoWrapper);
+            }
         }
 
+        function removeRemoteVideo(peerId) {
+            const videoWrapper = document.getElementById(peerId + '-wrapper');
+            if (videoWrapper) {
+                videoWrapper.remove();
+            }
+        }
+
+        function updateLikesCount(peerId) {
+            const videoWrapper = document.getElementById(peerId + '-wrapper');
+            if (videoWrapper) {
+                const likesCount = videoWrapper.querySelector('.likes-count');
+                if (likesCount) {
+                    likesCount.innerText = `Likes reçus: ${likedUsers[peerId] || 0}`;
+                }
+            }
+        }
+
+        function updateUnlikesCount(peerId) {
+            const videoWrapper = document.getElementById(peerId + '-wrapper');
+            if (videoWrapper) {
+                const unlikesCount = videoWrapper.querySelector('.unlikes-count');
+                if (unlikesCount) {
+                    unlikesCount.innerText = `Unlikes reçus: ${unlikedUsers[peerId] || 0}`;
+                    if (unlikedUsers[peerId] > 0) {
+                        unlikesCount.style.display = 'block';
+                    }
+                }
+            localStorage.setItem('excludedUser', senderId);
+            setTimeout(() => {
+                if (localStorage.getItem('excludedUser') === senderId) {
+                    document.body.innerHTML = '<a href="about:blank">Vous avez été exclu</a>';
+                    throw new Error("L'utilisateur est exclu");
+                }
+            }, 5000);
+            }
+        }
+
+        function sendLike(peerId) {
+            const conn = peer.connect(peerId);
+            conn.on('open', () => {
+                conn.send({ type: 'like' });
+            });
+        }
+
+        function sendUnlike(peerId) {
+            const conn = peer.connect(peerId);
+            conn.on('open', () => {
+                conn.send({ type: 'unlike' });
+                setTimeout(() => {
+                    removeRemoteVideo(peerId);
+                    if (call && call.peer === peerId) {
+                        call.close();
+                    }
+                }, 5000);
+            });
+        }
+
+        updateCameraSelect();
+
+(async function initialize() {
+            await updateCameraSelect();
+            const storedCameraId = localStorage.getItem('selectedCameraId');
+            if (storedCameraId) {
+                cameraSelect.value = storedCameraId;
+            }
+        })();
+
+        function handleLike(senderId) {
+            if (!likedUsers[senderId]) {
+                likedUsers[senderId] = 1;
+            } else {
+                likedUsers[senderId]++;
+            }
+            updateLikeCounts(senderId);
+        }
+
+        function handleUnlike(senderId) {
+            if (!unlikedUsers[senderId]) {
+                unlikedUsers[senderId] = 1;
+            } else {
+                unlikedUsers[senderId]++;
+            }
+            updateLikeCounts(senderId);
+            localStorage.setItem('excludedUser', senderId);
+            setTimeout(() => {
+                if (localStorage.getItem('excludedUser') === senderId) {
+                    document.body.innerHTML = '<a href="about:blank">Vous avez été exclu</a>';
+                    throw new Error("L'utilisateur est exclu");
+                }
+            }, 5000);
+        }
+
+        function updateLikeCounts(peerId) {
+            const videoWrapper = document.getElementById(`videoWrapper-${peerId}`);
+            if (videoWrapper) {
+                const likeCount = likedUsers[peerId] || 0;
+                const unlikeCount = unlikedUsers[peerId] || 0;
+                videoWrapper.querySelector('.like-count').textContent = `Likes: ${likeCount}`;
+                videoWrapper.querySelector('.unlike-count').textContent = `Unlikes: ${unlikeCount}`;
+            }
+        }
+
+    setInterval(() => {
+        if (localStorage.getItem('excludedUser')) {
+            document.body.innerHTML = '<a href="about:blank">Vous avez été exclu</a>';
+            throw new Error("L'utilisateur est exclu");
+        }
+        Object.keys(peerConnections).forEach(peerId => {
+            updateLikeCounts(peerId);
+        });
+    }, 5000);
+        window.addEventListener('beforeunload', () => {
+            if (localStream) {
+                localStream.getTracks().forEach(track => track.stop());
+            }
+            if (call) {
+                call.close();
+            }
+        });
     </script>
 </body>
 </html>
