--- a/WebCam_V3.html
+++ b/WebCam_V3.html
@@ -15,6 +15,7 @@
             margin: 0;
             background-color: #f0f0f0;
         }
+
         #video-container {
             display: flex;
             flex-wrap: wrap;
@@ -23,7 +24,10 @@
             margin-bottom: 20px;
         }
         video {
+            width: 40%;
+            height: 60vh;
             max-width: 40%;
+            max-height: 60vh;
             border: 1px solid #ccc;
             border-radius: 5px;
             margin: 5px;
@@ -32,7 +36,7 @@
             display: flex;
             align-items: center;
             flex-direction: column;
-            width: 100%;
+            width: 80%;
         }
         .controls button {
             margin-bottom: 5px;
@@ -44,7 +48,7 @@
             display: flex;
             align-items: center;
             flex-direction: column;
-            width: 100%;
+            width: 80%;
         }
         #main-controls label, #main-controls button {
             margin-bottom: 10px;
@@ -158,13 +162,13 @@
                         updateLikesCount(senderId);
                     } else if (data.type === 'unlike') {
                         const senderId = conn.peer;
-            localStorage.setItem('excludedUser', senderId);
-            setTimeout(() => {
-                if (localStorage.getItem('excludedUser') === senderId) {
-                    document.body.innerHTML = '<a href="about:blank">Vous avez été exclu</a>';
-                    throw new Error("L'utilisateur est exclu");
-                }
-            }, 5000);
+                        localStorage.setItem('excludedUser', senderId);
+                        setTimeout(() => {
+                            if (localStorage.getItem('excludedUser') === senderId) {
+                                document.body.innerHTML = '<a href="about:blank">Vous avez été exclu</a>';
+                                throw new Error("L'utilisateur est exclu");
+                            }
+                        }, 5000);
                         if (!unlikedUsers[senderId]) {
                             unlikedUsers[senderId] = 1;
                         } else {
@@ -221,7 +225,16 @@
                     cameraSelect.innerHTML = `<option value="${videoDevices[0].deviceId}">Caméra 1</option>`;
                 }
             }
-
+            if (videoDevices.length > 0) {
+                videoDevices.forEach((device, index) => {
+                    const option = document.createElement('option');
+                    option.value = device.deviceId;
+                    option.text = `Caméra ${index + 1}`;
+                    cameraSelect.appendChild(option);
+                });
+            } else {
+                cameraSelect.innerHTML = '<option value="">Aucune caméra détectée</option>';
+            }
             // Restore the previously selected camera
             const savedCameraId = localStorage.getItem('selectedCameraId');
             if (savedCameraId) {
