--- a/WebCam_V3.html
+++ b/WebCam_V3.html
@@ -15,23 +15,44 @@
             margin: 0;
             background-color: #f0f0f0;
         }
-
+        .video-wrapper {
+            position: relative;
+            display: inline-block;
+            width: 320px;
+            height: 240px;
+            margin: 5px;
+        }
+        video {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            max-width: 100%; /* Limite la largeur maximale à 100% de son conteneur */
+            max-height: 60vh; /* Limite la hauteur maximale à 60% de la hauteur de la fenêtre */
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            margin: 5px;
+        }
+        .controls {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            color: white;
+            text-align: center;
+        }
+        .like-button, .unlike-button {
+            background: transparent;
+            border: none;
+            color: white;
+            font-size: 20px;
+            cursor: pointer;
+        }
         #video-container {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
             width: 100%;
             margin-bottom: 20px;
-        }
-        video {
-            width: 40%; /* Ajustez la largeur selon vos besoins */
-            height: auto; /* Utilisez 'auto' pour conserver le ratio aspect */
-            max-width: 40%;
-            max-height: 20vh;
-            object-fit: contain;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            margin: 5px;
         }
         #controls {
             display: flex;
@@ -402,6 +423,7 @@
 
                 videoWrapper.appendChild(controlsDiv);
                 videoContainer.appendChild(videoWrapper);
+                 document.getElementById('video-container').appendChild(videoWrapper);
             }
         }
 
