--- a/WebCam_V3.html
+++ b/WebCam_V3.html
@@ -21,11 +21,15 @@
             width: 320px;
             height: 240px;
             margin: 5px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            overflow: hidden; /* Cache les parties de la vidéo qui débordent */
         }
         video {
             width: 100%;
-            height: auto;
-            object-fit: contain;
+            height: 100%;
+            object-fit: cover;
+            display: block;
             max-width: 100%; /* Limite la largeur maximale à 100% de son conteneur */
             max-height: 60vh; /* Limite la hauteur maximale à 60% de la hauteur de la fenêtre */
             border: 1px solid #ccc;
@@ -52,7 +56,7 @@
             flex-wrap: wrap;
             justify-content: center;
             width: 100%;
-            margin-bottom: 20px 0;
+            margin-bottom: 20px;
         }
         #controls {
             display: flex;
@@ -422,8 +426,7 @@
                 controlsDiv.appendChild(unlikesCount);
 
                 videoWrapper.appendChild(controlsDiv);
-                document.getElementById('video-container').appendChild(videoWrapper);
-            }
+                videoContainer.appendChild(videoWrapper);            }
         }
 
         function removeRemoteVideo(peerId) {
