--- a/WebCam_V3.html
+++ b/WebCam_V3.html
@@ -18,20 +18,19 @@
         .video-wrapper {
             position: relative;
             display: inline-block;
-            width: 320px;
-            height: 240px;
+            width: 100px;
+            height: 100px;
             margin: 5px;
             border: 1px solid #ccc;
             border-radius: 5px;
-            overflow: hidden; /* Cache les parties de la vidéo qui débordent */
+            overflow: hidden;
         }
         video {
             width: 100%;
             height: 100%;
-            object-fit: cover;
-            display: block;
-            max-width: 100%; /* Limite la largeur maximale à 100% de son conteneur */
-            max-height: 60vh; /* Limite la hauteur maximale à 60% de la hauteur de la fenêtre */
+            object-fit: contain;
+            max-width: 100%;
+            max-height: 60vh;
             border: 1px solid #ccc;
             border-radius: 5px;
             margin: 5px;
